@@ -1,5 +1,11 @@
 2005-01-07  Tamara Roberson  <foxxygirltamara@gmail.com>
 
+	* src/HandleView.cs:
+	
+	Some code cleanup.
+
+2005-01-07  Tamara Roberson  <foxxygirltamara@gmail.com>
+
 	* src/Album.cs:
 	* src/Item.cs:
 	* src/Makefile.am:
